# neonzero

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/filesystem/archive/backups/deleted_records/: voss_kai_ORIGINAL.record
data/filesystem/archive/deep_storage/: insurance.msg
data/filesystem/archive/system/.backdoor/: README_RIVER.txt
data/filesystem/lab-9/escape/comms/: contacts.txt  relay_status.txt
data/filesystem/lab-9/escape/door_controls/: override.sh
data/filesystem/lab-9/operations/: schedule.txt  staff_roster.txt
data/filesystem/lab-9/surveillance/room_31/: subject_notes.txt
data/filesystem/lab-9/systems/: door_controls.conf
data/filesystem/local/: .bash_history  .profile
data/filesystem/local/.ssh/: config  known_hosts
data/filesystem/local/desktop/: README.txt  note_to_self.txt
data/filesystem/local/docs/: project_lethe_summary.txt
data/filesystem/local/mail/.deleted/: 004_threat.msg  005_coordinates.msg
data/filesystem/local/mail/inbox/: 001_welcome.msg  002_reminder.msg  003_urgent.msg
data/filesystem/local/network/: hosts
src/neonvoid/: __init__.py  __main__.py  main.py
src/neonvoid/engine/: parser.py  sandbox.py  shell.py  world.py
src/neonvoid/engine/commands/: archive.py  base.py  filesystem.py  network.py  search.py  utility.py
src/neonvoid/game/: events.py  hints.py  progression.py  puzzles.py  state.py
src/neonvoid/story/: narrative.py
src/neonvoid/story/acts/: act1.py  act2.py  act3.py  act4.py  epilogue.py  prologue.py
src/neonvoid/ui/: ascii.py  credits.py  effects.py  prompt.py  terminal.py
(+10 files in other folders)
